--- a/app/src/main/res/layout/fragment_bitcoin_historical.xml
+++ b/app/src/main/res/layout/fragment_bitcoin_historical.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="adapter"
-            type="com.ganesh.bitcoinapp.presentation.hostoricalrate.BitCoinHistoricalAdapter" />
+            type="com.ganesh.bitcoinapp.presentation.hostoricalrate.HistoricalRateAdapter" />
 
         <variable
             name="visibilities"
