--- a/app/src/main/res/layout/fragment_currency_list_layout.xml
+++ b/app/src/main/res/layout/fragment_currency_list_layout.xml
@@ -13,12 +13,10 @@
             name="adapter"
             type="com.ganesh.bitcoinapp.presentation.currency.CurrencyListAdapter" />
 
+        <variable
+            name="visibilities"
+            type="Boolean" />
 
-            <variable
-                name="visibilities"
-                type="Boolean" />
-
-       
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,19 +31,17 @@
             app:adapter="@{adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-
-
         <ProgressBar
             android:id="@+id/progress_circular"
             style="@android:style/Widget.Holo.ProgressBar.Large"
+            visibilities="@{visibilities}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:progress="25"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            visibilities="@{visibilities}"
-            android:progress="25"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
