Unit test added

--- a/app/src/main/res/layout/adapter_currency_list.xml
+++ b/app/src/main/res/layout/adapter_currency_list.xml
@@ -13,19 +13,19 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="10dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="#FFFFFF"
+        style="@style/CardView.Light"
+        app:cardCornerRadius="5dp">
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="wrap_content"
             android:gravity="start|center"
+            android:padding="10dp"
             android:textAlignment="gravity"
+            android:textColor="#333333"
             android:textSize="16sp"
             tools:text="@{currenyModel.currnecyName}" />
 
