--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragment_bitcoin_details"
-        android:name="com.ganesh.bitcoinapp.presentation.bitcoin.BitCoinDetailsFragment">
+        android:name="com.ganesh.bitcoinapp.presentation.bitcoinhome.BitCoinHomFragment">
         <action
             android:id="@+id/action_bitcoin_to_currency_list_fragment"
             app:destination="@id/fragment_currency_list"></action>
