--- a/app/src/main/res/layout/adapter_bitcoin_historical_list.xml
+++ b/app/src/main/res/layout/adapter_bitcoin_historical_list.xml
@@ -15,37 +15,39 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_margin="2dp"
+        android:padding="10dp"
         app:cardCornerRadius="2dp">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:background="#ffffff"
             android:layout_height="wrap_content">
 
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/txt_date"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:gravity="start|center"
-            android:textColor="#FFFFFF"
-            android:textAlignment="gravity"
-            android:textSize="16sp"
-            tools:text="@{dateValue.date}" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/txt_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start|center"
+                android:textAlignment="gravity"
+                android:textColor="#333333"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@{dateValue.date}" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/txt_date"
-            android:gravity="start|center"
-            android:textColor="#FFFFFF"
-            android:textAlignment="gravity"
-            android:textSize="16sp"
-            tools:text="@{dateValue.currency}" />
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="start|center"
+                android:textAlignment="gravity"
+                android:textColor="#666666"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toRightOf="@+id/txt_date"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@{dateValue.currency}" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
