--- a/app/src/main/res/layout/fragment_bitcoin_details.xml
+++ b/app/src/main/res/layout/fragment_bitcoin_details.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffffff"
         android:padding="10dp"
         tools:context=".presentation.currency.CurrencyListFragment">
 
@@ -30,6 +31,7 @@
         <FrameLayout
             android:id="@+id/frm_current_fragment"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             app:layout_constraintTop_toBottomOf="@+id/btn_currency_name" />
@@ -39,8 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="#ffffff"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frm_current_fragment" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
