--- a/app/src/main/res/layout/fragment_bitcoin_historical.xml
+++ b/app/src/main/res/layout/fragment_bitcoin_historical.xml
@@ -10,7 +10,11 @@
             type="com.ganesh.bitcoinapp.presentation.hostoricalrate.HistoricalRateAdapter" />
 
         <variable
-            name="visibilities"
+            name="progressVisibilites"
+            type="Boolean" />
+
+        <variable
+            name="recyclerViewVisibilites"
             type="Boolean" />
 
     </data>
@@ -19,28 +23,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
+        android:background="#FFFFFF"
         tools:context=".presentation.currency.CurrencyListFragment">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/btn_currency_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:text="@string/currency"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/txt_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#333333"
+            android:gravity="center"
+            android:text="@string/historical_bitcoin_rate"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcr_todo_list"
+            android:id="@+id/rcr_currency_list"
+            visibilities="@{recyclerViewVisibilites}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
             app:adapter="@{adapter}"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
             style="@android:style/Widget.Holo.ProgressBar.Large"
-            visibilities="@{visibilities}"
+            visibilities="@{progressVisibilites}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:progress="25"
